fix: fixed popover on iOS, chat is now still open when reloading, chat history is saved in sessionStorage

--- a/discussion/src/components/chatboard/Chatboard.css
+++ b/discussion/src/components/chatboard/Chatboard.css
@@ -11,7 +11,7 @@
 	background-color: white;
 }
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 599px) {
 	#chatboard-container {
 		width: 100%;
 		height: 100%;
